# label-craft-llm

./: .gitignore  Makefile  README.md  log_config.json  pyproject.toml  ruff.toml
.github/test/: action.yml
.github/workflows/: test.yml
src/: create_messages.py  generate_by_gpt.py  main.py  preprocess.py
src/utils/: get_openai_api_key.py  init_logger.py
